tests/compile_fail/invalid_subgrid_line_name_repeat_zero_count.rs
use surgeist_style::SubgridLineNameRepeatCount;

fn main() {
    let _count = SubgridLineNameRepeatCount::Count(0);
}
