tests/compile_fail/invalid_subgrid_line_name_repeat_zero_count.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/invalid_subgrid_line_name_repeat_zero_count.rs:4:52
  |
4 |     let _count = SubgridLineNameRepeatCount::Count(0);
  |                  --------------------------------- ^ expected `SubgridLineNameRepeatCountValue`, found integer
  |                  |
  |                  arguments to this enum variant are incorrect
  |
note: tuple variant defined here
 --> src/value.rs
  |
  |     Count(SubgridLineNameRepeatCountValue),
  |     ^^^^^
